# DnDCC

./: README.md
src/: CMakeLists.txt  main.cpp
src/Enums/: CharacterClass.h
src/Interfaces/: IAbilities.hpp  ILevel.hpp
src/Models/: Character.cpp  Character.hpp
src2/: CMakeLists.txt  main.cpp
src2/Art/: Logo.cpp  Logo.h
src2/Database/: player_database.cpp  player_database.h
src2/Enumerators/: chacter_class.h  syllables.h
src2/Interfaces/: IDraw.h
src2/Modules/CSV_Parser/: csv_parser.cpp  csv_parser.h
src2/Modules/Dice/: dice_roller.cpp
src2/Modules/Loot/: loot_table.cpp  loot_table.h
src2/Modules/Name_Generator/: name_generator.h
src2/Modules/Player/: player.cpp  player.h
src2/Singletons/: DiceRoller.cpp  dice_roller.h
src2/Structures/: abilities.h  energy.h  stat.h
src2/Structures/Databases/: PlayerEntry.h
src2/Utilities/: console_formatter.h  input.cpp  name_generator.cpp  name_generator.h  utility.cpp  utility.h
src2/Utilities/Input/: input.cpp  input.h
